tests/checker/diagnostics/0766_polyvar_coercion_payload_mismatch_01.ml.infer.expected
File "0766_polyvar_coercion_payload_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0766_polyvar_coercion_payload_mismatch_01 is not a valid module name.

File "0766_polyvar_coercion_payload_mismatch_01.ml", line 2, characters 2-23:
2 |   (x :> [ `A of bool ])
      ^^^^^^^^^^^^^^^^^^^^^
Error: Type [ `A of int ] is not a subtype of [ `A of bool ]
       Type int is not a subtype of bool
