tests/checker/diagnostics/0766_polyvar_coercion_payload_mismatch_01.ml
let bad_alpha (x : [ `A of int ]) : [ `A of bool ] =
  (x :> [ `A of bool ])
